--- a/app/views/users/new.erb
+++ b/app/views/users/new.erb
@@ -1,5 +1,5 @@
 <h1> Create an account </h1>
-<form action="/users" method="post">
+<form action="/users/new" method="post">
   <label for='email'>
     Email:
     <input type="text" name="email"/>
@@ -15,3 +15,7 @@
 
   <input type="submit" value="Sign up"/>
 </form>
+<% if flash[:wrong_password] %>
+<br>
+    <%= flash[:wrong_password] %>
+<% end %>
