Completed 20 final stage of persisting email is passwords don't match

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,5 +9,9 @@
       Welcome, <%= current_user.email %>
     <% end %>
     <%= yield %>
+    <% if flash.now[:wrong_password] %>
+        <br>
+        <br> <%= flash.now[:wrong_password] %>
+    <% end %>
   </body>
 </html>
