--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -8,6 +8,11 @@
 
     <% if current_user %>
       Welcome, <%= current_user.email %>
+
+      <form action="/users/logout" method="post">
+        <input type="submit" value="Log out">
+      </form>
+
     <% end %>
     <%= yield %>
     <% if flash.now[:errors] %>
