--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,22 +5,8 @@
   </head>
 
   <body>
-
-    <% if current_user %>
-      Welcome, <%= current_user.email %>
-
-      <form action="/users/logout" method="post">
-        <input type="submit" value="Log out">
-      </form>
-
-    <% end %>
+    <%= partial :welcome %>
     <%= yield %>
-    <% if flash.now[:errors] %>
-          <ul id="errors">
-            <% flash.now[:errors].each do |message| %>
-            <li><%= message %></li>
-          </ul>
-      <% end %>
-    <% end %>
+    <%= partial :flash %>
   </body>
 </html>
